@@ -1,5 +1,7 @@
 Thu Mar 19 14:11:45 1998  Tom Tromey  <tromey@cygnus.com>
 
+	* javaprim.test: New file.
+
 	* sinclude.test: New file.
 
 Wed Mar 18 17:15:22 1998  Tom Tromey  <tromey@cygnus.com>
