@@ -1,5 +1,10 @@
 Thu Mar 19 01:33:35 1998  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_java): Use $(JAVAROOT) in place of `../..'
+	in default CLASSPATH.
+	(am_install_var): Allow `JAVA' variable to be defined.  Don't
+	define `JAVA' primary.
+
 	* automake.in (scan_one_configure_file): Check for `sinclude' and
 	turn into recursive call.
 
